style.css
*{
    font-family: 'Montserrat', sans-serif;
    margin:0;
    padding: 0;
    box-sizing: border-box;
    font-size: 12px;
    line-height: 16px;
}
.bg_black{
    background-color: black;
    color: #717171;
}
.bg_grey{
    background-color: #282828;
    color: white;
}
.bg_darkgrey{
    background-color: #080B12;
    color: white;
}
.main-spotify{
    background: rgb(19, 22, 27);
    background: linear-gradient(0deg, rgba(17,22,29,1) 22%, rgb(30, 36, 46) 100%);
    color: white;
}
.hoveractive{
    color: white;
    opacity: 1;
}
.flex_grow{
    flex-grow: 1;
}

body{
    display: flex;
    flex-direction: column-reverse;
    line-height: 1.6;
}
nav{
    height: 80px;
}

main{
    height: calc(100vh - 80px);
    display: flex;
}
aside{
    float: left;
    height: inherit;
    min-width: 200px;
    overflow: hidden;
}


    /* ASIDEBAR */
.logobox{
    position: relative;
    height: 70px;
    margin-bottom: 18px;
    padding: 24px 24px 0 24px;
}
.logo{
    width: 100%;
    max-width: 131px;
    height: 40px;
}
aside .box{
    padding: 0 24px;
    height: calc(100% - 86px);
    display: flex;
    flex-direction: column;
}

.home_panel img{
    height: 24px;
    vertical-align: middle;
    margin-right: 10px;
}
ul{
    list-style: none;
    padding: 0;
}
aside li{
    margin: 10px 0;
    color: white;
    opacity: 0.5;
}
h6{
    color: white;
    text-transform: uppercase;
}
.crea_playlist{
    display: flex;
    align-items: center;
    color: white;
    opacity: 0.5;

}
.ul_playlist{
    margin-top:24px;
    flex-grow: 1;
}
.playlist-icon{
    background-color: white;
    width: 35px;
    height: 35px;
    margin-right: 10px;
}
.plus i{
    position: absolute;
    top:50%;
    left:50%;
    transform: translate(-50%,-50%);
    color: black;
    font-size: 20px;
}
.profile_box{
    display: flex;
    align-items: center;
}
.imgbox{
    position: relative;
    width: 22px;
    height: 22px;
    box-sizing: border-box;
    margin:0 10px 10px 0;
    background-color: #717171;
    border-radius: 50%;
    display: inline-block;
}
.imgbox img{
    max-width:100%;
    max-height:100%;
    border-radius: 50%;
}
aside hr{
    border-color: #717171;
    margin: 15px 0;
}
.installapp_box i{
    margin-right: 10px;
}

/* NAVBAR */
nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 10px;
}
.box_playing{
    width: 30%;
    min-width: 180px;
    display: flex;
    justify-content: flex-start;
}
.box_playing .box_img{
    position: relative;
    width: 40px;
    height: 40px;
    flex-shrink: 0;
}
.box_playing .box_img img{
    width: 100%;
    height: 100%;
}
.box_titolobrano{
    margin: 0 14px;
    align-self: center;
    max-width: 80px;
}
.artistabrano{
    color: #717171;
}
.box_playing .boxbtn{
    align-self: center;
    margin: 0 5px;
    width: 15px;
    height: 15px;
    font-size: 13px;
    color: #717171;
}
.box_playing .boxbtn:hover{
    cursor: pointer;
    color: white;
}
.boxbtn{
    align-self: center;
    margin: 0 5px;
    width: 20px;
    height: 20px;
    font-size: 15px;
}

.playbar{
    flex-grow: 1;
    width: 40%;
}
.playbar .box{
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
}
.playoptions{
    display: flex;
    margin-bottom: 10px;
}
.mainbtn{
    width: 30px;
    height: 30px;
    font-size: 30px;
}
.mainbtn{
    border: 1;
}
.progbar{
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100%;
    /* align-content:baseline; ???*/
}
.section_bgbar{
    flex-grow: 1;
    width: 100%;
    position: relative;
    height:10px;
    align-content:baseline;
    margin: 0 10px;
    background-color: transparent;
}
.time{
}
.bgbar{
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    height: 4px;
    width: 100%;
    overflow: hidden;
    background-color: #535353;
    color: #b3b3b3;
    border-radius: 5px;
}
.playedbar{
    background-color: #b3b3b3;
    border-radius: 5px;
    width: 20%;
}
.time{
    font-size: 11px;
}

.left_options{
    display: flex;
    width: 25%;
    justify-content: flex-end;
}
.left_options .boxbtn{
    align-self: center;
    margin: 0 5px;
    width: 12px;
    height: 12px;
    font-size: 12px;
}
.left_options .section_bgbar{
    width: 100%;
    max-width: 70px;
}

/* MAIN WINDOW*/
/* .navv{
} */
section{
    width: calc(100vw - 200px);
    overflow: hidden;
}
.btn_upgrade{
    border: solid 2px white;
    border-radius: 40px;
    padding: 10px 30px;
}
.navv .box{
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    width: 100%;
    height: 80px;
    padding-right: 30px;
}
.container{
    width: 100%;
}
.main-spotify{
    height: calc(100% - 80px);
    color: #b3b3b3;
    overflow: auto;
}
.navbarr .box{
    padding: 15px 25px;
    display: flex;
    justify-content: space-around;
    font-size: 10px;
    max-width: 500px;
    margin: auto;
    flex-wrap: wrap;
}

.section_brano{

}
.h_brano{
    color: white;
    padding: 20px 0;
    font-size: 20px;
}
.section_brano .box{
    padding:0 15px;

}
.section_brano .box2{
    display: flex;
    flex-wrap: wrap;
}
.brano{
    width: 155px;
    height: 200px;
    flex-shrink: 0;
    padding: 0 6.5px;
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;
}
.boxbrano{
    position: relative;
}
.box3{
    flex-grow: 1;
    text-align: center;
    margin-top: 10px;
}
.title{
    color: white;
    font-size: 14px;
    margin-bottom: 6px;
}
.subtitle{
    color: #717171;
}

/* BRANO HOVER */
.hover_overlay{
    position: absolute;
    top:0;
    left:0;
    height: 100%;
    width: 100%;
    background-color: rgba(0, 0, 0, 0.562);
    display: none;
}
.hover_overlay i{
    position: absolute;
    top:50%;
    left:50%;
    transform: translate(-50%,-50%);
    font-size: 60px;
    color: white;
    padding: 2px;
    z-index: 1;
}
.brano:hover .box3{
    opacity: 0.7;
}
.brano:hover .hover_overlay{
    display: block;
}

